// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`importMapReplace > should apply custom mappings 1`] = `
"
/** importMapReplace */
import CustomPackage from "/custom-package?external=@emotion/react/jsx-runtime,react/jsx-runtime,react-dom/server,react-dom/client,@emotion/react,react,framer-motion,react-dom,recharts&bundle=true";"
`;

exports[`importMapReplace > should ignore absolute URLs 1`] = `
"
/** importMapReplace */
import MyComponent from "http://example.com/MyComponent.js";"
`;

exports[`importMapReplace > should ignore relative URLs 1`] = `
"
/** importMapReplace */
import MyComponent from "/live/MyComponent/index.js";"
`;

exports[`importMapReplace > should not do anything 1`] = `
"
/** importMapReplace */
 eturn e[t] === r ||
              (e[t] = r,
                (t === "prop" || t === "value" || t === "name" ||
                  t === "params" || t === "important" || t === "text") &&
                e.markDirty()),
              !0;"
`;

exports[`importMapReplace > should process this 1`] = `
"
/** importMapReplace */
eturn d.className=f,a&&(d.ref=a),O.createElement(O.Fragment,null,O.createElement(On,{cache:t,serialized:m,isStringTag:typeof c=="string"}),O.createElement(c,d))}),dr=Rn;import"react";var va=Y(Yr());var xa=Z.Fragment;function Sa(e,t,a){return me.call(t,"css")?Z.jsx(dr,pr(e,t),a):Z.jsx(e,t,a)}function Ea(e,t,a){return me.call(t,"css")?Z.jsxs(dr,pr(e,t),a):Z.jsxs(e,t,a)}";"
`;

exports[`importMapReplace > should replace DYNAMID shadcdn imports 1`] = `
"
/** importMapReplace */
import React from "/@/components/ui/alert.mjs";"
`;

exports[`importMapReplace > should replace coder44  1`] = `
"
/** importMapReplace */

    import { css } from "@emotion/react";
    import $ from "react";

    import { css  as $kdkd } from "@emotion/react";

    import { useEffect, useState, useRef } from "react";
    import type { FC } from "react";
    import QRTerminal from "/qrcode-terminal?external=@emotion/react/jsx-runtime,react/jsx-runtime,react-dom/server,react-dom/client,@emotion/react,react,framer-motion,react-dom,recharts&bundle=true";
    "
`;

exports[`importMapReplace > should replace dynamic imports 1`] = `
"
/** importMapReplace */
const React = import("react");"
`;

exports[`importMapReplace > should replace dynamic imports 2`] = `
"
/** importMapReplace */
const React = import("react");"
`;

exports[`importMapReplace > should replace dynamic imports 3`] = `
"
/** importMapReplace */
const module = import("/some-module?external=@emotion/react/jsx-runtime,react/jsx-runtime,react-dom/server,react-dom/client,@emotion/react,react,framer-motion,react-dom,recharts&bundle=true");"
`;

exports[`importMapReplace > should replace dynamic imports at the end 1`] = `
"
/** importMapReplace */

    import{Buffer as De}from"/v125/buffer@6.0.3/es2024/buffer.bundle.mjs"
    let { Mp3Encoder: t } = await import("/lamejs?external=@emotion/react/jsx-runtime,react/jsx-runtime,react-dom/server,react-dom/client,@emotion/react,react,framer-motion,react-dom,recharts&bundle=true");
    import{timeDay as _,timeSunday as bt,timeMonday as b,timeThursday as w,timeYear as S,utcDay as $,utcSunday as Vt,utcMonday as V,utcThursday as p,utcYear as F}from"/d3-time?external=@emotion/react/jsx-runtime,react/jsx-runtime,react-dom/server,react-dom/client,@emotion/react,react,framer-motion,react-dom,recharts&bundle=true&exports=timeDay,timeSunday,timeMonday,timeThursday,timeYear,utcDay,utcSunday,utcMonday,utcThursday,utcYear";
      async function loadModule() {
        let{default:c}=await import("/axios?external=@emotion/react/jsx-runtime,react/jsx-runtime,react-dom/server,react-dom/client,@emotion/react,react,framer-motion,react-dom,recharts&bundle=true");
        let{default:d}=await import("https://unpkg.com/axios/dist/axios.min.js");
        
        const module = await import("/some-module?external=@emotion/react/jsx-runtime,react/jsx-runtime,react-dom/server,react-dom/client,@emotion/react,react,framer-motion,react-dom,recharts&bundle=true");
        // do something with module
      }
        import"react/jsx-runtime";
        import"react";
        async function y(s){await s(m)}
        export{n as Particles,n as default,y as initParticlesEngine};
    "
`;

exports[`importMapReplace > should replace dynamic imports at the end 2`] = `
"
/** importMapReplace */

    import { useSpring, animated } from "/react-spring?external=@emotion/react/jsx-runtime,react/jsx-runtime,react-dom/server,react-dom/client,@emotion/react,react,framer-motion,react-dom,recharts&bundle=true&exports=useSpring,animated"; // Importing react-spring
    "
`;

exports[`importMapReplace > should replace dynamic imports inside a function 1`] = `
"
/** importMapReplace */

    import{Buffer as De}from"/v125/buffer@6.0.3/es2024/buffer.bundle.mjs"
    let { Mp3Encoder: t } = await import("/lamejs?external=@emotion/react/jsx-runtime,react/jsx-runtime,react-dom/server,react-dom/client,@emotion/react,react,framer-motion,react-dom,recharts&bundle=true");
    import{timeDay as _,timeSunday as bt,timeMonday as b,timeThursday as w,timeYear as S,utcDay as $,utcSunday as Vt,utcMonday as V,utcThursday as p,utcYear as F}from"/d3-time?external=@emotion/react/jsx-runtime,react/jsx-runtime,react-dom/server,react-dom/client,@emotion/react,react,framer-motion,react-dom,recharts&bundle=true&exports=timeDay,timeSunday,timeMonday,timeThursday,timeYear,utcDay,utcSunday,utcMonday,utcThursday,utcYear";
      async function loadModule() {
        let{default:c}=await import("/axios?external=@emotion/react/jsx-runtime,react/jsx-runtime,react-dom/server,react-dom/client,@emotion/react,react,framer-motion,react-dom,recharts&bundle=true");
        let{default:d}=await import("https://unpkg.com/axios/dist/axios.min.js");
        
        const module = await import("/some-module?external=@emotion/react/jsx-runtime,react/jsx-runtime,react-dom/server,react-dom/client,@emotion/react,react,framer-motion,react-dom,recharts&bundle=true");
        // do something with module
      }
    "
`;

exports[`importMapReplace > should replace dynamic imports with await 1`] = `
"
/** importMapReplace */
const module = await import("/some-module?external=@emotion/react/jsx-runtime,react/jsx-runtime,react-dom/server,react-dom/client,@emotion/react,react,framer-motion,react-dom,recharts&bundle=true");"
`;

exports[`importMapReplace > should replace dynamic imports2 1`] = `
"
/** importMapReplace */
const dynamic = 'dd'; const React = import(\`\${dynamic}dom\`);"
`;

exports[`importMapReplace > should replace shadcdn  1`] = `
"
/** importMapReplace */

    import { css } from "@emotion/react";
    import $ from "react";
    import { Button } from "/@/components/ui/button.mjs";

    import { css  as $kdkd } from "@emotion/react";

    import { useEffect, useState, useRef } from "react";
    import type { FC } from "react";
    import QRTerminal from "/qrcode-terminal?external=@emotion/react/jsx-runtime,react/jsx-runtime,react-dom/server,react-dom/client,@emotion/react,react,framer-motion,react-dom,recharts&bundle=true";
    "
`;

exports[`importMapReplace > should replace the live urls 1`] = `
"
/** importMapReplace */
import Box from "/live/Box/index.js";"
`;

exports[`importMapReplace > should replace top-level exports 1`] = `
"
/** importMapReplace */
export { default } from "react";"
`;

exports[`importMapReplace > should replace top-level exports, except the ones in importmap 1`] = `
"
/** importMapReplace */
import { useState } from "react";"
`;

exports[`importMapReplace > should replace top-level imports 1`] = `
"
/** importMapReplace */
import React from "react";"
`;

exports[`importMapReplace > should replace top-level imports with dot in the path 1`] = `
"
/** importMapReplace */
import React from "/react.gl?external=@emotion/react/jsx-runtime,react/jsx-runtime,react-dom/server,react-dom/client,@emotion/react,react,framer-motion,react-dom,recharts&bundle=true";"
`;

exports[`importMapReplace > should replace top-leveldd imports with dot in the path 1`] = `
"
/** importMapReplace */
import React from "/live/box/index.js";"
`;
